--- a/statics/css/detect.css
+++ b/statics/css/detect.css
@@ -17,10 +17,40 @@
     display: flex;
     flex: 2;
     height: 300px;
+    overflow: hidden;
+}
+.sm-left {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex: 2;
+    height: 300px;
+    overflow: hidden;
 }
 .selector-left {
     flex: 2;
+    overflow-y: scroll;
 }
 .img-right {
     flex: 7;
+}
+.demo-image-list {
+    box-sizing: border-box;
+    width: 100%;
+    margin-bottom: 2px;
+    border: solid;
+    border-width: 3px;    
+    border-color: transparent;
+}
+.demo-image-list:hover {
+    box-sizing: border-box;
+    border: solid;
+    border-width: 3px;    
+    border-color:gray;
+}
+.back-arrow {
+    height: 20px;
+}
+.forward-arrow {
+    height: 20px;
 }
