--- a/web/templates/web/base.html
+++ b/web/templates/web/base.html
@@ -4,20 +4,22 @@
         <meta name="viewport" content="width=device-width">
         <meta name="keywords" content="人脸识别,icyface,免费，图像识别">
         <link rel="stylesheet" type="" href="statics/css/clear-style.css">
-        <link rel="stylesheet" type="" href="statics/css/share.css">
+        <link rel="stylesheet" type="" href="statics/css/share.css?v=1">
         {% block css %}
         {% endblock %}
     </head>
     <body>
 	 <div class="header-page">
-            <div class="header-left">
-                <div class="span-logo">
-                    <h1 class="text-logo">Icyface</h1>
+            <a href="/" class="dismiss-a">
+                <div class="header-left">
+                    <div class="span-logo">
+                        <h1 class="text-logo">Icyface</h1>
+                    </div>
+                    <div class="logo-descri">
+                        <h3>人脸识别平台</h3>
+                    </div>
                 </div>
-                <div class="logo-descri">
-                    <h3>人脸识别平台</h3>
-                </div>
-            </div>
+            </a>
             <div class="header-center">
             </div>
             <div class="header-right">
