--- a/statics/css/detect.css
+++ b/statics/css/detect.css
@@ -65,6 +65,7 @@
     width: auto;
 }
 .image-big {
+    position: relative;
     display: block;
     flex: 1;
     height: 300px;
@@ -78,4 +79,13 @@
     display: block;
     height: 300px;
     flex:1;
+}
+.coveringCanvas{ 
+    position: relative;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    width:100%; height:100%; 
+    position:absolute; top:0px; left:0px;
 }
