--- a/web/templates/web/base.html
+++ b/web/templates/web/base.html
@@ -27,7 +27,8 @@
         </div>
         {% block content %}
 	{% endblock content %}
-        {% block js %}
+    <script src="statics/js/jquery-3.2.1.min.js"></script>
+    {% block js %}
 	{% endblock js %}
     </body>
 </html>
