--- a/statics/css/detect.css
+++ b/statics/css/detect.css
@@ -8,6 +8,8 @@
     margin:30px;
  }
 .img-right-show {
+    display: flex;
+    flex-direction: column;
     min-width: 300px;
     flex: 1.5;
     height: 300px;
@@ -16,7 +18,7 @@
     min-width: 500px;
     display: flex;
     flex: 2;
-    height: 600px;
+    height: 700px;
     overflow: hidden;
 }
 .sm-left {
@@ -67,9 +69,10 @@
 .image-big {
     position: relative;
     display: block;
-    flex: 1;
     height: 300px;
     text-align: center;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 .json-back {
     position: relative;
@@ -116,4 +119,56 @@
     overflow-x: hidden;
     overflow-y: auto;
     width:100%;
+}
+.img-upload {
+    display: flex;
+    flex-direction: row;
+    height: 30px;
+    margin: 5px;
+    margin-top: 15px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+.upload-img {
+    font-size: 15px;
+    border: solid 1px #379edf;
+    max-width: 100px;
+    flex: 1;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 30px;       /* the same as your div height */
+    -webkit-transition: color .4s ease;
+    -moz-transition: color .4s ease;
+    -o-transition: color .4s ease;
+    transition: color .4s ease;
+    position: relative;
+}
+.upload-img:hover{
+    background:#379edf;
+    border: solid 1px #379edf;
+    color: white;
+    text-decoration: none;
+    -webkit-transition: color .4s ease;
+    -moz-transition: color .4s ease;
+    -o-transition: color .4s ease;
+    transition: color .4s ease;
+}
+.url-img {
+    flex: 3.5;
+    border: solid 1px #379edf;
+    margin-left:10px;
+}
+.input-img {
+    height: 100%;
+    opacity: 0
+}
+.upload-text {
+    text-align: center;
+    width:100%;
+    position: absolute;
+}
+.image-input {
+    width: 100%;
+    height: 100%;
+    opacity: 0;
 }
