--- a/web/templates/web/base.html
+++ b/web/templates/web/base.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width">
         <meta name="keywords" content="人脸识别,icyface,免费，图像识别">
         <link rel="stylesheet" type="" href="statics/css/clear-style.css">
-        <link rel="stylesheet" type="" href="statics/css/share.css?v=1">
+        <link rel="stylesheet" type="" href="statics/css/share.css?v={% now "U" %}">
         {% block css %}
         {% endblock %}
     </head>
