--- a/web/templates/web/index.html
+++ b/web/templates/web/index.html
@@ -32,7 +32,7 @@
                     <div class="api-append">
                         从一张照片中检测出所有人脸
                     </div>
-                    <a href="detect.html" class="demo">尝试demo</a>
+                    <a href="/detect.html" class="demo">尝试demo</a>
                 </div>
                 <div class="api-compair block">
                     <div class="img-out">
@@ -44,7 +44,7 @@
                     <div class="api-append">
                         比较两张人脸是否是同一个人
                     </div>
-                    <a href="demo" class="demo">尝试demo</a>
+                    <a href="/compair.html" class="demo">尝试demo</a>
                 </div>
             </div>
             <div class="footer">
