--- a/web/templates/web/compair.html
+++ b/web/templates/web/compair.html
@@ -39,7 +39,7 @@
                         </div>
                         <div class="url-img">
                             <div class="url">
-                                <textarea rows="" cols="" placeholder='图片url地址' class="url-textarea" ng-model="cc.urlcontent"></textarea>
+                                <textarea rows="" cols="" placeholder='    图片url地址' class="url-textarea" ng-model="cc.urlcontent"></textarea>
                             </div>
                             <span class="upload-buttom" ng-click="cc.urlupload()">
                                 检测
@@ -52,6 +52,7 @@
                         </div>
                         <div class="json-response">
                             <textarea readonly rows="" cols="" class="textarea-json">{{cc.json_ret}}</textarea>
+                            <textarea readonly rows="" cols="" class="textarea-json">{{cc.text_ret}}</textarea>
                         </div>
                     </div>
                 </div>
