--- a/web/templates/web/index.html
+++ b/web/templates/web/index.html
@@ -24,7 +24,7 @@
             <div class="api-specific">
                 <div class="api-detect block">
                     <div class="img-out">
-                        <img src="statics/img/detect.jpeg" class="img-cir">
+                        <img src="statics/img/detect.png" class="img-cir">
                     </div>
                     <div class="api-text">
                         人脸检测
