--- a/web/templates/web/compair.html
+++ b/web/templates/web/compair.html
@@ -65,7 +65,7 @@
         </div>
 	{% endverbatim %}
         <div class="footer">
-            Powered by <a class="footer-url" href="http://cloud.icybee.cn">Icycloud</a>
+            由 <a class="footer-url" href="http://cloud.icybee.cn">Icycloud</a> 提供计算资源
         </div>
 	{% endblock content %}
         {% block js %}
