--- a/web/templates/web/index.html
+++ b/web/templates/web/index.html
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div class="footer">
-                Powered by <a class="footer-url" href="http://cloud.icybee.cn">Icycloud</a>
+                由 <a class="footer-url" href="http://cloud.icybee.cn">Icycloud</a> 提供计算资源
             </div>
 
         </div>
