--- a/web/templates/web/index.html
+++ b/web/templates/web/index.html
@@ -11,7 +11,7 @@
                     <div class="center-desc">
                         高准确率检测识别人脸，永久免费
                     </div>
-                    <a class="center-api-buttom" href="api">
+                    <a class="center-api-buttom" href="http://icybee.cn/article/65.html">
                         使用api
                     </a>
                 </div>
